signup controller create, fixes
