# backend/tsoa/swagger.json
@@ -5,7 +5,66 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"UserSchema": {
+				"properties": {
+					"uid": {
+						"type": "string"
+					},
+					"displayName": {
+						"type": "string"
+					},
+					"photoURL": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"emailVerified": {
+						"type": "boolean"
+					},
+					"phoneNumber": {
+						"type": "string",
+						"nullable": true
+					},
+					"isAnonymous": {
+						"type": "boolean"
+					},
+					"tenantId": {
+						"type": "string",
+						"nullable": true
+					}
+				},
+				"required": [
+					"uid",
+					"displayName",
+					"photoURL",
+					"email",
+					"emailVerified",
+					"phoneNumber",
+					"isAnonymous",
+					"tenantId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorSchema": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"code": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"message",
+					"code"
+				],
+				"type": "object",
+				"additionalProperties": false
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,6 +77,57 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/auth/signup": {
+			"post": {
+				"operationId": "Signup",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/UserSchema"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorSchema"
+										}
+									]
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"email": "test@gmail.com",
+											"password": "pas34Wo"
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "password",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/todo": {
 			"get": {
 				"operationId": "GetAll",
